--- a/exam-1/About-us.html
+++ b/exam-1/About-us.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="assets/css/magnific-popup.css">
     <link rel="stylesheet" href="assets/css/owl.carousel.css">
     <link href="assets/css/style.css" rel="stylesheet">
-    <link href="assets/css/responsive.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style-4.css">
+    <link href="assets/css/responsive.css" rel="stylesheet">
 </head>
 
 <body>
@@ -21,7 +21,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-2 text-left">
-                    <a href="index.html"><img src="assets/img/logo.png" alt="logo"></a>
+                    <div class="logo">
+                        <a href="index.html"><img src="assets/img/logo.png" alt="logo"></a>
+                    </div>
                 </div>
                 <div class="col-md-8 text-center">
                     <div class="main_menu">
@@ -53,7 +55,7 @@
                                                 <li><a href="services-v1.html">Service</a></li>
                                                 <li><a href="case-study-v1.html">Case-studies</a></li>
                                                 <li><a href="blog.html">Blog</a></li>
-                                                <li><a href="Contact-v1.html">Contact</a></li>
+                                                <li><a href="Contact-us-v1.html">Contact</a></li>
                                             </ul>
                                         </div>
                                         <div class="col-md-3">
@@ -98,9 +100,9 @@
                                     <li><a href="blog-single.html">single-blog</a></li>
                                 </ul>
                             </li>
-                            <li><a href="Contact-v1.html">Contact</a>
+                            <li><a href="Contact-us-v1.html">Contact</a>
                                 <ul>
-                                     <li><a href="Contact-us-v1.html">Contact-v1</a></li>
+                                    <li><a href="Contact-us-v1.html">Contact-v1</a></li>
                                     <li><a href="Contact-us-v2.html">Contact-v2</a></li>
                                 </ul>
                             </li>
@@ -113,6 +115,7 @@
             </div>
         </div>
     </div>
+
     <div class="breadcroumb-area breadcroumb-about-us">
         <div class="container">
             <div class="row">
@@ -122,6 +125,7 @@
             </div>
         </div>
     </div>
+
     <div class="section-padding">
         <div class="container">
             <div class="row">
@@ -138,11 +142,12 @@
             </div>
         </div>
     </div>
+
     <div class="section-padding padding-top-0">
         <div class="container">
             <div class="row">
                 <div class="col-md-5">
-                    <div class="padding-top-80">
+                    <div class="padding-top-80 mobile-padding-fix">
                         <h2>Transparency of Online Marketing 
                         Efforts from us
                      </h2>
@@ -150,12 +155,13 @@
                         <div class="boxed-btn">How it works</div>
                     </div>
                 </div>
-                <div class="col-md-7 text-right">
+                <div class="col-md-7 text-right tablet-mobile-align">
                     <img src="assets/img/device.png" alt="">
                 </div>
             </div>
         </div>
     </div>
+
     <div class="section-padding padding-top-0">
         <div class="container">
             <div class="row">
@@ -167,25 +173,25 @@
                 </div>
             </div>
             <div class="row text-center boxed-img">
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-6">
                     <div class="img-box">
                         <img src="assets/img/team-pic-1.jpg" alt="" class="shadow-img">
                         <h4 class="heading-margin-0">Fred Ebert</h4>Creative Designer
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-6">
                     <div class="img-box">
                         <img src="assets/img/team-pic-2.jpg" alt="" class="shadow-img">
                         <h4 class="heading-margin-0">Shahriar Hossain</h4>Ui Designer
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-6">
                     <div class="img-box">
                         <img src="assets/img/team-pic-3.jpg" alt="" class="shadow-img">
                         <h4 class="heading-margin-0">Rasel Ahmed</h4>Wordpress Expert
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-6">
                     <div class="img-box">
                         <img src="assets/img/team-pic-4.jpg" alt="" class="shadow-img">
                         <h4 class="heading-margin-0">Sally Viera</h4>Web Developer
@@ -194,6 +200,7 @@
             </div>
         </div>
     </div>
+
     <div class="section-padding padding-top-0 overflow-x-hidden">
         <div class="container">
             <div class="row theme-2">
@@ -287,37 +294,40 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
-                    <div class="col-md-4">
-                        <h4>Product</h4>
-                        <ul>
-                            <li><a href="">Product</a></li>
-                            <li><a href="">Pricing</a></li>
-                            <li><a href="">Customers</a></li>
-                            <li><a href="">Page Builder</a></li>
-                            <li><a href="">What's new</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-4">
-                        <h4>Company</h4>
-                        <ul>
-                            <li><a href="">About us</a></li>
-                            <li><a href="">Try Demo</a></li>
-                            <li><a href="">Terms of service</a></li>
-                            <li><a href="">Page Builder</a></li>
-                            <li><a href="">Privacy policy</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-4">
-                        <h4>Help Center</h4>
-                        <ul>
-                            <li><a href="">Help centre</a></li>
-                            <li><a href="">Email Us</a></li>
-                            <li><a href="">Message Us</a></li>
-                            <li><a href="">Blog</a></li>
-                        </ul>
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <h4>Product</h4>
+                            <ul>
+                                <li><a href="">Product</a></li>
+                                <li><a href="">Pricing</a></li>
+                                <li><a href="">Customers</a></li>
+                                <li><a href="">Page Builder</a></li>
+                                <li><a href="">What's new</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-4">
+                            <h4>Company</h4>
+                            <ul>
+                                <li><a href="">About us</a></li>
+                                <li><a href="">Try Demo</a></li>
+                                <li><a href="">Terms of service</a></li>
+                                <li><a href="">Page Builder</a></li>
+                                <li><a href="">Privacy policy</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-4">
+                            <h4>Help Center</h4>
+                            <ul>
+                                <li><a href="">Help centre</a></li>
+                                <li><a href="">Email Us</a></li>
+                                <li><a href="">Message Us</a></li>
+                                <li><a href="">Blog</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-4">
+                    <div class="mobile-only-margin"></div>
                     <h4>Sign Up to Our Weekly Newslater</h4>
                     <div class="email-subscribe form">
                         <form action="index.html">
