--- a/exam-1/Blog-single.html
+++ b/exam-1/Blog-single.html
@@ -21,7 +21,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-2 text-left">
+                <div class="logo">
                     <a href="index.html"><img src="assets/img/logo.png" alt="logo"></a>
+                </div>
                 </div>
                 <div class="col-md-8 text-center">
                     <div class="main_menu">
@@ -53,7 +55,7 @@
                                                 <li><a href="services-v1.html">Service</a></li>
                                                 <li><a href="case-study-v1.html">Case-studies</a></li>
                                                 <li><a href="blog.html">Blog</a></li>
-                                                <li><a href="Contact-v1.html">Contact</a></li>
+                                                <li><a href="Contact-us-v1.html">Contact</a></li>
                                             </ul>
                                         </div>
                                         <div class="col-md-3">
@@ -98,7 +100,7 @@
                                     <li><a href="blog-single.html">single-blog</a></li>
                                 </ul>
                             </li>
-                            <li><a href="Contact-v1.html">Contact</a>
+                            <li><a href="Contact-us-v1.html">Contact</a>
                                 <ul>
                                      <li><a href="Contact-us-v1.html">Contact-v1</a></li>
                                     <li><a href="Contact-us-v2.html">Contact-v2</a></li>
@@ -191,7 +193,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
-                    <div class="col-md-4">
+                <div class="row">
+                    <div class="col-sm-4">
                         <h4>Product</h4>
                         <ul>
                             <li><a href="">Product</a></li>
@@ -201,7 +204,7 @@
                             <li><a href="">What's new</a></li>
                         </ul>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-sm-4">
                         <h4>Company</h4>
                         <ul>
                             <li><a href="">About us</a></li>
@@ -211,7 +214,7 @@
                             <li><a href="">Privacy policy</a></li>
                         </ul>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-sm-4">
                         <h4>Help Center</h4>
                         <ul>
                             <li><a href="">Help centre</a></li>
@@ -221,7 +224,9 @@
                         </ul>
                     </div>
                 </div>
+                </div>
                 <div class="col-md-4">
+                <div class="mobile-only-margin"></div>
                     <h4>Sign Up to Our Weekly Newslater</h4>
                     <div class="email-subscribe form">
                         <form action="index.html">
