--- a/exam-1/home-2.html
+++ b/exam-1/home-2.html
@@ -21,7 +21,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-2 text-left">
+                <div class="logo">
                     <a href="index.html"><img src="assets/img/logo.png" alt="logo"></a>
+                </div>
                 </div>
                 <div class="col-md-8 text-center">
                     <div class="main_menu">
@@ -53,7 +55,7 @@
                                                 <li><a href="services-v1.html">Service</a></li>
                                                 <li><a href="case-study-v1.html">Case-studies</a></li>
                                                 <li><a href="blog.html">Blog</a></li>
-                                                <li><a href="Contact-v1.html">Contact</a></li>
+                                                <li><a href="Contact-us-v1.html">Contact</a></li>
                                             </ul>
                                         </div>
                                         <div class="col-md-3">
@@ -98,7 +100,7 @@
                                     <li><a href="blog-single.html">single-blog</a></li>
                                 </ul>
                             </li>
-                            <li><a href="Contact-v1.html">Contact</a>
+                            <li><a href="Contact-us-v1.html">Contact</a>
                                 <ul>
                                      <li><a href="Contact-us-v1.html">Contact-v1</a></li>
                                     <li><a href="Contact-us-v2.html">Contact-v2</a></li>
@@ -179,7 +181,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-6">
                     <div class="single-service-2">
                         <div class="service-box-table">
                             <div class="service-icon">
@@ -189,7 +191,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-6">
                     <a href="" class="single-service-2">
                         <div class="service-box-table">
                             <div class="service-icon">
@@ -199,7 +201,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-6">
                     <a href="" class="single-service-2">
                         <div class="service-box-table">
                             <div class="service-icon">
@@ -209,7 +211,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-6">
                     <div class="single-service-2">
                         <div class="service-box-table">
                             <div class="service-icon">
@@ -258,7 +260,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-8 col-sm-offset-2">
                     <div class="case-study-box-style-2">
                         <div class="case-study-preview case-study-preview-1">
                             <div class="case-study-link-tablecell">
@@ -269,7 +271,7 @@
                         <h4>Project Alibaba UX <span>UI & UX Design</span></h4>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-8 col-sm-offset-2">
                     <div class="case-study-box-style-2">
                         <div class="case-study-preview case-study-preview-2">
                             <div class="case-study-link-tablecell">
@@ -280,7 +282,7 @@
                         <h4>Amazon Eco UI <span>UI & UX Design</span></h4>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-8 col-sm-offset-2">
                     <div class="case-study-box-style-2">
                         <div class="case-study-preview case-study-preview-3">
                             <div class="case-study-link-tablecell">
@@ -375,7 +377,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row tablet-mobile-blogs">
                 <div class="col-md-4">
                     <div class="single_blog_box theme-2">
                         <h3>Credibly maintain client-centric
@@ -421,12 +423,13 @@ distributed partnerships.</h3>
     <div class="footer-area theme-2">
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
-                    <img src="assets/img/logo.png" alt="">
+                <div class="col-md-4 col-sm-4">
+                    <a href=""><img src="assets/img/logo.png" alt=""></a>
                     <p>Traffic is a great marking template with so many great features. Traffic have 5 homepage and so many block with great UI.</p>
                 </div>
-                <div class="col-md-8">
-                    <div class="col-md-4">
+                <div class="col-sm-8">
+                <div class="row">
+                    <div class="col-sm-3 col-sm-offset-1">
                         <h4>Company</h4>
                         <ul>
                             <li><a href="">About us</a></li>
@@ -436,7 +439,7 @@ distributed partnerships.</h3>
                             <li><a href="">Privacy policy</a></li>
                         </ul>
                     </div>
-                    <div class="col-md-2 col-md-offset-2">
+                    <div class="col-sm-3 col-sm-offset-1">
                         <h4>Help Center</h4>
                         <ul>
                             <li><a href="">Help centre</a></li>
@@ -445,7 +448,7 @@ distributed partnerships.</h3>
                             <li><a href="">Blog</a></li>
                         </ul>
                     </div>
-                    <div class="col-md-2 col-md-offset-2">
+                    <div class="col-sm-3 col-sm-offset-1">
                         <h4>Follow Us</h4>
                         <ul class="social-link">
                             <li><a href=""><i class="fa fa-facebook"></i>Facebook</a></li>
@@ -454,6 +457,7 @@ distributed partnerships.</h3>
                             <li><a href=""><i class="fa fa-linkedin"></i>Linkdin</a></li>
                             <li><a href=""><i class="fa fa-instagram"></i>Instagram</a></li>
                         </ul>
+                    </div>
                     </div>
                 </div>
             </div>
