--- a/exam-1/home-3.html
+++ b/exam-1/home-3.html
@@ -22,7 +22,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-2 text-left">
+                <div class="logo">
                     <a href="index.html"><img src="assets/img/logo.png" alt="logo"></a>
+                </div>
                 </div>
                 <div class="col-md-10 text-right">
                     <div class="main_menu">
@@ -54,7 +56,7 @@
                                                 <li><a href="services-v1.html">Service</a></li>
                                                 <li><a href="case-study-v1.html">Case-studies</a></li>
                                                 <li><a href="blog.html">Blog</a></li>
-                                                <li><a href="Contact-v1.html">Contact</a></li>
+                                                <li><a href="Contact-us-v1.html">Contact</a></li>
                                             </ul>
                                         </div>
                                         <div class="col-md-3">
@@ -99,7 +101,7 @@
                                     <li><a href="blog-single.html">single-blog</a></li>
                                 </ul>
                             </li>
-                            <li><a href="Contact-v1.html">Contact</a>
+                            <li><a href="Contact-us-v1.html">Contact</a>
                                 <ul>
                                      <li><a href="Contact-us-v1.html">Contact-v1</a></li>
                                     <li><a href="Contact-us-v2.html">Contact-v2</a></li>
@@ -217,7 +219,7 @@
                 </div>
             </div>
             <div class="row text-center">
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-8 col-sm-offset-2">
                     <div class="single-service-box">
                         <div class="service-icon">
                             <span class="service-number">01</span>
@@ -228,7 +230,7 @@
                         <a href="" class="service-read-more-btn">Read More<i class="fa fa-long-arrow-right"></i></a>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-8 col-sm-offset-2">
                     <div class="single-service-box">
                         <div class="service-icon">
                             <span class="service-number">02</span>
@@ -239,7 +241,7 @@
                         <a href="" class="service-read-more-btn">Read More<i class="fa fa-long-arrow-right"></i></a>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-8 col-sm-offset-2">
                     <div class="single-service-box">
                         <div class="service-icon">
                             <span class="service-number">03</span>
@@ -345,8 +347,8 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-4">
+            <div class="row tablet-mobile-blogs">
+                <div class="col-md-4 col-sm-8 col-sm-offset-2">
                     <a href="" class="single_blog_box">
                         <div class="blog-thumb-wrapper blog-bg-1"></div>
                         <p class="blog-meta">15 May, 2017 , 9:07 am</p>
@@ -356,7 +358,7 @@ tactical niches.</h4>
                         </p>
                     </a>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-8 col-sm-offset-2">
                     <a href="" class="single_blog_box">
                         <div class="blog-thumb-wrapper blog-bg-2"></div>
                         <p class="blog-meta">15 May, 2017 , 9:07 am</p>
@@ -366,7 +368,7 @@ tactical niches.</h4>
                         </p>
                     </a>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-8 col-sm-offset-2">
                     <a href="" class="single_blog_box">
                         <div class="blog-thumb-wrapper blog-bg-3"></div>
                         <p class="blog-meta">15 May, 2017 , 9:07 am</p>
