--- a/exam-1/home-4.html
+++ b/exam-1/home-4.html
@@ -84,13 +84,13 @@
     <div class="section-padding">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-sm-6">
                     <div class="tile-gallery text-right">
                         <img src="assets/img/service-tile-img.jpg" alt="">
                         <img class="absolute-gallery-img" src="assets/img/service-tile-img-2.jpg" alt="">
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-sm-6">
                     <div class="padding-top-80">
                         <h3>How can traffic
 help my buisness grow?</h3>
@@ -106,9 +106,9 @@ help my buisness grow?</h3>
     <div class="section-padding service-section">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-sm-6">
                     <div class="row text-center">
-                        <div class="col-md-6">
+                        <div class="col-sm-6">
                             <div class="service-box-2">
                                 <div class="service-icon">
                                     <img src="assets/img/service-icon-1.jpg" alt="">
@@ -117,7 +117,7 @@ help my buisness grow?</h3>
                                 <p>Li said Beijing’s latest would make it harder China to meet its air quality targets and serve as an alert that progress </p>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-sm-6">
                             <div class="service-box-2">
                                 <div class="service-icon">
                                     <img src="assets/img/service-icon-2.jpg" alt="">
@@ -126,7 +126,7 @@ help my buisness grow?</h3>
                                 <p>Li said Beijing’s latest would make it harder China to meet its air quality targets and sho serve as an alert that progress </p>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-sm-6">
                             <div class="service-box-2">
                                 <div class="service-icon">
                                     <img src="assets/img/service-icon-1.jpg" alt="">
@@ -135,7 +135,7 @@ help my buisness grow?</h3>
                                 <p>Li said Beijing’s latest would make it harder China to meet its air quality targets and sh serve as an alert that progress </p>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-sm-6">
                             <div class="service-box-2">
                                 <div class="service-icon">
                                     <i class="fa fa-pie-chart"></i>
@@ -281,7 +281,8 @@ help my buisness grow?</h3>
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
-                    <div class="col-md-4">
+                <div class="row">
+                    <div class="col-sm-4">
                         <h4>Product</h4>
                         <ul>
                             <li><a href="">Product</a></li>
@@ -291,7 +292,7 @@ help my buisness grow?</h3>
                             <li><a href="">What's new</a></li>
                         </ul>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-sm-4">
                         <h4>Company</h4>
                         <ul>
                             <li><a href="">About us</a></li>
@@ -301,7 +302,7 @@ help my buisness grow?</h3>
                             <li><a href="">Privacy policy</a></li>
                         </ul>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-sm-4">
                         <h4>Follow Us</h4>
                         <ul>
                             <li><a href=""><i class="fa fa-facebook"></i>Facebook</a></li>
@@ -312,7 +313,9 @@ help my buisness grow?</h3>
                         </ul>
                     </div>
                 </div>
+                </div>
                 <div class="col-md-4">
+                <div class="mobile-only-margin"></div>
                     <h4>Sign Up to Our Weekly Newslater</h4>
                     <div class="email-subscribe form">
                         <form action="index.html">
