--- a/exam-1/index.html
+++ b/exam-1/index.html
@@ -20,7 +20,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-2 text-left">
-                    <a href="index.html"><img src="assets/img/logo.png" alt="logo"></a>
+                    <div class="logo">
+                        <a href="index.html"><img src="assets/img/logo.png" alt="logo"></a>
+                    </div>
                 </div>
                 <div class="col-md-8 text-center">
                     <div class="main_menu">
@@ -52,7 +54,7 @@
                                                 <li><a href="services-v1.html">Service</a></li>
                                                 <li><a href="case-study-v1.html">Case-studies</a></li>
                                                 <li><a href="blog.html">Blog</a></li>
-                                                <li><a href="Contact-v1.html">Contact</a></li>
+                                                <li><a href="Contact-us-v1.html">Contact</a></li>
                                             </ul>
                                         </div>
                                         <div class="col-md-3">
@@ -97,16 +99,16 @@
                                     <li><a href="blog-single.html">single-blog</a></li>
                                 </ul>
                             </li>
-                            <li><a href="Contact-v1.html">Contact</a>
+                            <li><a href="Contact-us-v1.html">Contact</a>
                                 <ul>
-                                     <li><a href="Contact-us-v1.html">Contact-v1</a></li>
+                                    <li><a href="Contact-us-v1.html">Contact-v1</a></li>
                                     <li><a href="Contact-us-v2.html">Contact-v2</a></li>
                                 </ul>
                             </li>
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-2 text-center">
+                <div class="col-md-2 text-right">
                     <a href="qoute.html" class="boxed-btn">Free SEO Analysis</a>
                 </div>
             </div>
@@ -145,7 +147,7 @@
                 </div>
             </div>
             <div class="row text-center">
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-6">
                     <div class="single-service-box">
                         <div class="service-icon">
                             <i class="fa fa-area-chart"></i>
@@ -156,7 +158,7 @@
                         <a href="" class="service-read-more-btn">Read More<i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-6">
                     <div class="single-service-box">
                         <div class="service-icon">
                             <i class="fa fa-search-plus"></i>
@@ -167,7 +169,7 @@
                         <a href="" class="service-read-more-btn">Read More<i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-6">
                     <div class="single-service-box">
                         <div class="service-icon">
                             <i class="fa fa-pencil"></i>
@@ -178,7 +180,7 @@
                         <a href="" class="service-read-more-btn">Read More<i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-6">
                     <div class="single-service-box">
                         <div class="service-icon">
                             <i class="fa fa-line-chart"></i>
@@ -189,7 +191,7 @@
                         <a href="" class="service-read-more-btn">Read More<i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-6">
                     <div class="single-service-box">
                         <div class="service-icon">
                             <i class="fa fa-file-text"></i>
@@ -200,7 +202,7 @@
                         <a href="" class="service-read-more-btn">Read More<i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-6">
                     <div class="single-service-box">
                         <div class="service-icon">
                             <i class="fa fa-medium"></i>
@@ -219,7 +221,7 @@
             </div>
             <div class="row">
                 <div class="col-md-5">
-                    <div class="padding-top-80">
+                    <div class="padding-top-80 mobile-padding-fix">
                         <h2>Transparency of Online Marketing 
                         Efforts from us
                      </h2>
@@ -227,7 +229,7 @@
                         <div class="boxed-btn">How it works</div>
                     </div>
                 </div>
-                <div class="col-md-7 text-right">
+                <div class="col-md-7 text-right tablet-mobile-align">
                     <img src="assets/img/device.png" alt="">
                 </div>
             </div>
@@ -489,37 +491,40 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
-                    <div class="col-md-4">
-                        <h4>Product</h4>
-                        <ul>
-                            <li><a href="">Product</a></li>
-                            <li><a href="">Pricing</a></li>
-                            <li><a href="">Customers</a></li>
-                            <li><a href="">Page Builder</a></li>
-                            <li><a href="">What's new</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-4">
-                        <h4>Company</h4>
-                        <ul>
-                            <li><a href="">About us</a></li>
-                            <li><a href="">Try Demo</a></li>
-                            <li><a href="">Terms of service</a></li>
-                            <li><a href="">Page Builder</a></li>
-                            <li><a href="">Privacy policy</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-4">
-                        <h4>Help Center</h4>
-                        <ul>
-                            <li><a href="">Help centre</a></li>
-                            <li><a href="">Email Us</a></li>
-                            <li><a href="">Message Us</a></li>
-                            <li><a href="">Blog</a></li>
-                        </ul>
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <h4>Product</h4>
+                            <ul>
+                                <li><a href="">Product</a></li>
+                                <li><a href="">Pricing</a></li>
+                                <li><a href="">Customers</a></li>
+                                <li><a href="">Page Builder</a></li>
+                                <li><a href="">What's new</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-4">
+                            <h4>Company</h4>
+                            <ul>
+                                <li><a href="">About us</a></li>
+                                <li><a href="">Try Demo</a></li>
+                                <li><a href="">Terms of service</a></li>
+                                <li><a href="">Page Builder</a></li>
+                                <li><a href="">Privacy policy</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-4">
+                            <h4>Help Center</h4>
+                            <ul>
+                                <li><a href="">Help centre</a></li>
+                                <li><a href="">Email Us</a></li>
+                                <li><a href="">Message Us</a></li>
+                                <li><a href="">Blog</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-4">
+                    <div class="mobile-only-margin"></div>
                     <h4>Sign Up to Our Weekly Newslater</h4>
                     <div class="email-subscribe form">
                         <form action="index.html">
