--- a/exam-1/qoute.html
+++ b/exam-1/qoute.html
@@ -20,8 +20,10 @@
     <div class="header_area">
         <div class="container">
             <div class="row">
+            <div class="logo">
                 <div class="col-md-2 text-left">
                     <a href="index.html"><img src="assets/img/logo.png" alt="logo"></a>
+                </div>
                 </div>
                 <div class="col-md-8 text-center">
                     <div class="main_menu">
@@ -54,7 +56,7 @@
                                                     <li><a href="services-v1.html">Service</a></li>
                                                     <li><a href="case-study-v1.html">Case-studies</a></li>
                                                     <li><a href="blog.html">Blog</a></li>
-                                                    <li><a href="Contact-v1.html">Contact</a></li>
+                                                    <li><a href="Contact-us-v1.html">Contact</a></li>
                                                 </ul>
                                             </div>
                                             <div class="col-md-3">
@@ -99,7 +101,7 @@
                                         <li><a href="blog-single.html">single-blog</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="Contact-v1.html">Contact</a>
+                                <li><a href="Contact-us-v1.html">Contact</a>
                                     <ul>
                                          <li><a href="Contact-us-v1.html">Contact-v1</a></li>
                                         <li><a href="Contact-us-v2.html">Contact-v2</a></li>
@@ -168,14 +170,15 @@
             </div>
         </div>
     </div>
+
     <div class="section-padding padding-top-0">
         <div class="container">
             <div class="row">
-                <div class="col-md-5">
-                    <img src="assets/img/contact-us.jpg" class="shadow-img" alt="">
+                <div class="col-md-5 col-sm-5">
+                    <img src="assets/img/contact-us.jpg" class="shadow-img mobile-height" alt="">
                 </div>
-                <div class="col-md-7">
-                    <div class="contact-form-heading">
+                <div class="col-md-7 col-sm-7">
+                    <div class="contact-fom-heading">
                         <h3>Drop Us a line</h3>
                         <p>Sifting through teaspoons of clay and sand scraped from the floors of caves, German researchers have to be managed to isolate ancient human DNA without turning up a single bone.
                         </p>
@@ -203,6 +206,7 @@
             </div>
         </div>
     </div>
+
     <div class="cta-area theme-5 pricing-cta  text-center">
         <div class="container">
             <div class="row">
@@ -219,7 +223,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
-                    <div class="col-md-4">
+                <div class="row">
+                    <div class="col-sm-4">
                         <h4>Product</h4>
                         <ul>
                             <li><a href="">Product</a></li>
@@ -229,7 +234,7 @@
                             <li><a href="">What's new</a></li>
                         </ul>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-sm-4">
                         <h4>Company</h4>
                         <ul>
                             <li><a href="">About us</a></li>
@@ -239,7 +244,7 @@
                             <li><a href="">Privacy policy</a></li>
                         </ul>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-sm-4">
                         <h4>Help Center</h4>
                         <ul>
                             <li><a href="">Help centre</a></li>
@@ -249,7 +254,9 @@
                         </ul>
                     </div>
                 </div>
+                </div>
                 <div class="col-md-4">
+                <div class="mobile-only-margin"></div>
                     <h4>Sign Up to Our Weekly Newslater</h4>
                     <div class="email-subscribe form">
                         <form action="index.html">
