--- a/exam-1/Case-study-details.html
+++ b/exam-1/Case-study-details.html
@@ -21,7 +21,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-2 text-left">
-                    <a href="index.html"><img src="assets/img/logo.png" alt="logo"></a>
+                    <div class="logo">
+                        <a href="index.html"><img src="assets/img/logo.png" alt="logo"></a>
+                    </div>
                 </div>
                 <div class="col-md-8 text-center">
                     <div class="main_menu">
@@ -54,7 +56,7 @@
                                                     <li><a href="services-v1.html">Service</a></li>
                                                     <li><a href="case-study-v1.html">Case-studies</a></li>
                                                     <li><a href="blog.html">Blog</a></li>
-                                                    <li><a href="Contact-v1.html">Contact</a></li>
+                                                    <li><a href="Contact-us-v1.html">Contact</a></li>
                                                 </ul>
                                             </div>
                                             <div class="col-md-3">
@@ -99,9 +101,9 @@
                                         <li><a href="blog-single.html">single-blog</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="Contact-v1.html">Contact</a>
+                                <li><a href="Contact-us-v1.html">Contact</a>
                                     <ul>
-                                         <li><a href="Contact-us-v1.html">Contact-v1</a></li>
+                                        <li><a href="Contact-us-v1.html">Contact-v1</a></li>
                                         <li><a href="Contact-us-v2.html">Contact-v2</a></li>
                                     </ul>
                                 </li>
@@ -150,7 +152,8 @@
                         <p>Earth science Ph.D. student at Australian National University and the lead author paper published in Nature on Wednesday that may hold the answer. Mr. Jones and his coll developed a model that simulates what’s happening in our planet’s mantle, beneath crust that we live on, offering a window to the center.</p>
                     </div>
                 </div>
-                <div class="col-md-6 text-right">
+                <div class="col-md-6 text-right tablet-mobile-align">
+                    <div class="mobile-only-margin"></div>
                     <img class="shadow-img" src="assets/img/case-study-details2.jpg" alt="">
                 </div>
             </div>
@@ -206,37 +209,40 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
-                    <div class="col-md-4">
-                        <h4>Product</h4>
-                        <ul>
-                            <li><a href="">Product</a></li>
-                            <li><a href="">Pricing</a></li>
-                            <li><a href="">Customers</a></li>
-                            <li><a href="">Page Builder</a></li>
-                            <li><a href="">What's new</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-4">
-                        <h4>Company</h4>
-                        <ul>
-                            <li><a href="">About us</a></li>
-                            <li><a href="">Try Demo</a></li>
-                            <li><a href="">Terms of service</a></li>
-                            <li><a href="">Page Builder</a></li>
-                            <li><a href="">Privacy policy</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-4">
-                        <h4>Help Center</h4>
-                        <ul>
-                            <li><a href="">Help centre</a></li>
-                            <li><a href="">Email Us</a></li>
-                            <li><a href="">Message Us</a></li>
-                            <li><a href="">Blog</a></li>
-                        </ul>
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <h4>Product</h4>
+                            <ul>
+                                <li><a href="">Product</a></li>
+                                <li><a href="">Pricing</a></li>
+                                <li><a href="">Customers</a></li>
+                                <li><a href="">Page Builder</a></li>
+                                <li><a href="">What's new</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-4">
+                            <h4>Company</h4>
+                            <ul>
+                                <li><a href="">About us</a></li>
+                                <li><a href="">Try Demo</a></li>
+                                <li><a href="">Terms of service</a></li>
+                                <li><a href="">Page Builder</a></li>
+                                <li><a href="">Privacy policy</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-4">
+                            <h4>Help Center</h4>
+                            <ul>
+                                <li><a href="">Help centre</a></li>
+                                <li><a href="">Email Us</a></li>
+                                <li><a href="">Message Us</a></li>
+                                <li><a href="">Blog</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-4">
+                    <div class="mobile-only-margin"></div>
                     <h4>Sign Up to Our Weekly Newslater</h4>
                     <div class="email-subscribe form">
                         <form action="index.html">
