--- a/exam-1/FAQ.html
+++ b/exam-1/FAQ.html
@@ -21,7 +21,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-2 text-left">
-                    <a href="index.html"><img src="assets/img/logo.png" alt="logo"></a>
+                    <div class="logo">
+                        <a href="index.html"><img src="assets/img/logo.png" alt="logo"></a>
+                    </div>
                 </div>
                 <div class="col-md-8 text-center">
                     <div class="main_menu">
@@ -54,7 +56,7 @@
                                                     <li><a href="services-v1.html">Service</a></li>
                                                     <li><a href="case-study-v1.html">Case-studies</a></li>
                                                     <li><a href="blog.html">Blog</a></li>
-                                                    <li><a href="Contact-v1.html">Contact</a></li>
+                                                    <li><a href="Contact-us-v1.html">Contact</a></li>
                                                 </ul>
                                             </div>
                                             <div class="col-md-3">
@@ -99,9 +101,9 @@
                                         <li><a href="blog-single.html">single-blog</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="Contact-v1.html">Contact</a>
+                                <li><a href="Contact-us-v1.html">Contact</a>
                                     <ul>
-                                         <li><a href="Contact-us-v1.html">Contact-v1</a></li>
+                                        <li><a href="Contact-us-v1.html">Contact-v1</a></li>
                                         <li><a href="Contact-us-v2.html">Contact-v2</a></li>
                                     </ul>
                                 </li>
@@ -322,37 +324,40 @@ Broke a Glass? Someday You Might 3-D-Print a New One ?
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
-                    <div class="col-md-4">
-                        <h4>Product</h4>
-                        <ul>
-                            <li><a href="">Product</a></li>
-                            <li><a href="">Pricing</a></li>
-                            <li><a href="">Customers</a></li>
-                            <li><a href="">Page Builder</a></li>
-                            <li><a href="">What's new</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-4">
-                        <h4>Company</h4>
-                        <ul>
-                            <li><a href="">About us</a></li>
-                            <li><a href="">Try Demo</a></li>
-                            <li><a href="">Terms of service</a></li>
-                            <li><a href="">Page Builder</a></li>
-                            <li><a href="">Privacy policy</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-4">
-                        <h4>Help Center</h4>
-                        <ul>
-                            <li><a href="">Help centre</a></li>
-                            <li><a href="">Email Us</a></li>
-                            <li><a href="">Message Us</a></li>
-                            <li><a href="">Blog</a></li>
-                        </ul>
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <h4>Product</h4>
+                            <ul>
+                                <li><a href="">Product</a></li>
+                                <li><a href="">Pricing</a></li>
+                                <li><a href="">Customers</a></li>
+                                <li><a href="">Page Builder</a></li>
+                                <li><a href="">What's new</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-4">
+                            <h4>Company</h4>
+                            <ul>
+                                <li><a href="">About us</a></li>
+                                <li><a href="">Try Demo</a></li>
+                                <li><a href="">Terms of service</a></li>
+                                <li><a href="">Page Builder</a></li>
+                                <li><a href="">Privacy policy</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-4">
+                            <h4>Help Center</h4>
+                            <ul>
+                                <li><a href="">Help centre</a></li>
+                                <li><a href="">Email Us</a></li>
+                                <li><a href="">Message Us</a></li>
+                                <li><a href="">Blog</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-4">
+                    <div class="mobile-only-margin"></div>
                     <h4>Sign Up to Our Weekly Newslater</h4>
                     <div class="email-subscribe form">
                         <form action="index.html">
@@ -384,7 +389,7 @@ Broke a Glass? Someday You Might 3-D-Print a New One ?
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/owl.carousel.min.js"></script>
-        <script src="assets/js/jquery.magnific-popup.min.js"></script>
+    <script src="assets/js/jquery.magnific-popup.min.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
 
