--- a/exam-1/blog.html
+++ b/exam-1/blog.html
@@ -21,7 +21,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-2 text-left">
-                    <a href="index.html"><img src="assets/img/logo.png" alt="logo"></a>
+                    <div class="logo">
+                        <a href="index.html"><img src="assets/img/logo.png" alt="logo"></a>
+                    </div>
                 </div>
                 <div class="col-md-8 text-center">
                     <div class="main_menu">
@@ -53,7 +55,7 @@
                                                 <li><a href="services-v1.html">Service</a></li>
                                                 <li><a href="case-study-v1.html">Case-studies</a></li>
                                                 <li><a href="blog.html">Blog</a></li>
-                                                <li><a href="Contact-v1.html">Contact</a></li>
+                                                <li><a href="Contact-us-v1.html">Contact</a></li>
                                             </ul>
                                         </div>
                                         <div class="col-md-3">
@@ -98,9 +100,9 @@
                                     <li><a href="blog-single.html">single-blog</a></li>
                                 </ul>
                             </li>
-                            <li><a href="Contact-v1.html">Contact</a>
+                            <li><a href="Contact-us-v1.html">Contact</a>
                                 <ul>
-                                     <li><a href="Contact-us-v1.html">Contact-v1</a></li>
+                                    <li><a href="Contact-us-v1.html">Contact-v1</a></li>
                                     <li><a href="Contact-us-v2.html">Contact-v2</a></li>
                                 </ul>
                             </li>
@@ -125,7 +127,7 @@
     <div class="section-padding">
         <div class="container">
             <div class="row">
-                <div class="col-md-4 ">
+                <div class="col-md-4 col-sm-6">
                     <a href="" class="single_blog_box">
                         <div class="blog-thumb-wrapper blog-bg-1"></div>
                         <p class="blog-meta">15 May, 2017 , 9:07 am</p>
@@ -135,7 +137,7 @@
                         </p>
                     </a>
                 </div>
-                <div class="col-md-4 ">
+                <div class="col-md-4 col-sm-6">
                     <a href="" class="single_blog_box">
                         <div class="blog-thumb-wrapper blog-bg-2"></div>
                         <p class="blog-meta">15 May, 2017 , 9:07 am</p>
@@ -145,7 +147,7 @@
                         </p>
                     </a>
                 </div>
-                <div class="col-md-4 ">
+                <div class="col-md-4 col-sm-6">
                     <a href="" class="single_blog_box">
                         <div class="blog-thumb-wrapper blog-bg-3"></div>
                         <p class="blog-meta">15 May, 2017 , 9:07 am</p>
@@ -155,7 +157,7 @@
                         </p>
                     </a>
                 </div>
-                <div class="col-md-4 ">
+                <div class="col-md-4 col-sm-6">
                     <a href="" class="single_blog_box">
                         <div class="blog-thumb-wrapper blog-bg-4"></div>
                         <p class="blog-meta">15 May, 2017 , 9:07 am</p>
@@ -165,7 +167,7 @@
                         </p>
                     </a>
                 </div>
-                <div class="col-md-4 ">
+                <div class="col-md-4 col-sm-6">
                     <a href="" class="single_blog_box">
                         <div class="blog-thumb-wrapper blog-bg-5"></div>
                         <p class="blog-meta">15 May, 2017 , 9:07 am</p>
@@ -175,7 +177,7 @@
                         </p>
                     </a>
                 </div>
-                <div class="col-md-4 ">
+                <div class="col-md-4 col-sm-6">
                     <a href="" class="single_blog_box">
                         <div class="blog-thumb-wrapper blog-bg-6"></div>
                         <p class="blog-meta">15 May, 2017 , 9:07 am</p>
@@ -185,7 +187,7 @@
                         </p>
                     </a>
                 </div>
-                <div class="col-md-4 ">
+                <div class="col-md-4 col-sm-6">
                     <a href="" class="single_blog_box">
                         <div class="blog-thumb-wrapper blog-bg-7"></div>
                         <p class="blog-meta">15 May, 2017 , 9:07 am</p>
@@ -195,7 +197,7 @@
                         </p>
                     </a>
                 </div>
-                <div class="col-md-4 ">
+                <div class="col-md-4 col-sm-6">
                     <a href="" class="single_blog_box">
                         <div class="blog-thumb-wrapper blog-bg-8"></div>
                         <p class="blog-meta">15 May, 2017 , 9:07 am</p>
@@ -205,7 +207,7 @@
                         </p>
                     </a>
                 </div>
-                <div class="col-md-4 ">
+                <div class="col-md-4 col-sm-6">
                     <a href="" class="single_blog_box">
                         <div class="blog-thumb-wrapper blog-bg-9"></div>
                         <p class="blog-meta">15 May, 2017 , 9:07 am</p>
@@ -234,37 +236,40 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
-                    <div class="col-md-4">
-                        <h4>Product</h4>
-                        <ul>
-                            <li><a href="">Product</a></li>
-                            <li><a href="">Pricing</a></li>
-                            <li><a href="">Customers</a></li>
-                            <li><a href="">Page Builder</a></li>
-                            <li><a href="">What's new</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-4">
-                        <h4>Company</h4>
-                        <ul>
-                            <li><a href="">About us</a></li>
-                            <li><a href="">Try Demo</a></li>
-                            <li><a href="">Terms of service</a></li>
-                            <li><a href="">Page Builder</a></li>
-                            <li><a href="">Privacy policy</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-4">
-                        <h4>Help Center</h4>
-                        <ul>
-                            <li><a href="">Help centre</a></li>
-                            <li><a href="">Email Us</a></li>
-                            <li><a href="">Message Us</a></li>
-                            <li><a href="">Blog</a></li>
-                        </ul>
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <h4>Product</h4>
+                            <ul>
+                                <li><a href="">Product</a></li>
+                                <li><a href="">Pricing</a></li>
+                                <li><a href="">Customers</a></li>
+                                <li><a href="">Page Builder</a></li>
+                                <li><a href="">What's new</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-4">
+                            <h4>Company</h4>
+                            <ul>
+                                <li><a href="">About us</a></li>
+                                <li><a href="">Try Demo</a></li>
+                                <li><a href="">Terms of service</a></li>
+                                <li><a href="">Page Builder</a></li>
+                                <li><a href="">Privacy policy</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-4">
+                            <h4>Help Center</h4>
+                            <ul>
+                                <li><a href="">Help centre</a></li>
+                                <li><a href="">Email Us</a></li>
+                                <li><a href="">Message Us</a></li>
+                                <li><a href="">Blog</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-4">
+                    <div class="mobile-only-margin"></div>
                     <h4>Sign Up to Our Weekly Newslater</h4>
                     <div class="email-subscribe form">
                         <form action="index.html">
