--- a/exam-1/case-study-v1.html
+++ b/exam-1/case-study-v1.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon.ico">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="assets/css/magnific-popup.css">
+    <link rel="stylesheet" href="assets/css/magnific-popup.css">
     <link rel="stylesheet" href="assets/css/owl.carousel.css">
     <link href="assets/css/style.css" rel="stylesheet">
     <link href="assets/css/responsive.css" rel="stylesheet">
@@ -21,7 +21,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-2 text-left">
-                    <a href="index.html"><img src="assets/img/logo.png" alt="logo"></a>
+                    <div class="logo">
+                        <a href="index.html"><img src="assets/img/logo.png" alt="logo"></a>
+                    </div>
                 </div>
                 <div class="col-md-8 text-center">
                     <div class="main_menu">
@@ -54,7 +56,7 @@
                                                     <li><a href="services-v1.html">Service</a></li>
                                                     <li><a href="case-study-v1.html">Case-studies</a></li>
                                                     <li><a href="blog.html">Blog</a></li>
-                                                    <li><a href="Contact-v1.html">Contact</a></li>
+                                                    <li><a href="Contact-us-v1.html">Contact</a></li>
                                                 </ul>
                                             </div>
                                             <div class="col-md-3">
@@ -99,9 +101,9 @@
                                         <li><a href="blog-single.html">single-blog</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="Contact-v1.html">Contact</a>
+                                <li><a href="Contact-us-v1.html">Contact</a>
                                     <ul>
-                                         <li><a href="Contact-us-v1.html">Contact-v1</a></li>
+                                        <li><a href="Contact-us-v1.html">Contact-v1</a></li>
                                         <li><a href="Contact-us-v2.html">Contact-v2</a></li>
                                     </ul>
                                 </li>
@@ -127,7 +129,7 @@
     <div class="section-padding">
         <div class="container">
             <div class="row theme-2 boxed-case-study">
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-6">
                     <div class="single-case-study-bg-1">
                         <div class="single-case-study">
                             <div class="case-study-wrapper theme-2">
@@ -138,7 +140,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-6">
                     <div class="single-case-study-bg-2">
                         <div class="single-case-study">
                             <div class="case-study-wrapper theme-2">
@@ -149,7 +151,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-6">
                     <div class="single-case-study-bg-3">
                         <div class="single-case-study">
                             <div class="case-study-wrapper theme-2">
@@ -160,7 +162,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-6">
                     <div class="single-case-study-bg-4">
                         <div class="single-case-study">
                             <div class="case-study-wrapper theme-2">
@@ -171,7 +173,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-6">
                     <div class="single-case-study-bg-5">
                         <div class="single-case-study">
                             <div class="case-study-wrapper">
@@ -182,7 +184,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-6">
                     <div class="single-case-study-bg-6">
                         <div class="single-case-study">
                             <div class="case-study-wrapper theme-2">
@@ -193,7 +195,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-6">
                     <div class="single-case-study-bg-6">
                         <div class="single-case-study">
                             <div class="case-study-wrapper theme-2">
@@ -204,7 +206,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-6">
                     <div class="single-case-study-bg-6">
                         <div class="single-case-study">
                             <div class="case-study-wrapper theme-2">
@@ -234,37 +236,40 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
-                    <div class="col-md-4">
-                        <h4>Product</h4>
-                        <ul>
-                            <li><a href="">Product</a></li>
-                            <li><a href="">Pricing</a></li>
-                            <li><a href="">Customers</a></li>
-                            <li><a href="">Page Builder</a></li>
-                            <li><a href="">What's new</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-4">
-                        <h4>Company</h4>
-                        <ul>
-                            <li><a href="">About us</a></li>
-                            <li><a href="">Try Demo</a></li>
-                            <li><a href="">Terms of service</a></li>
-                            <li><a href="">Page Builder</a></li>
-                            <li><a href="">Privacy policy</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-4">
-                        <h4>Help Center</h4>
-                        <ul>
-                            <li><a href="">Help centre</a></li>
-                            <li><a href="">Email Us</a></li>
-                            <li><a href="">Message Us</a></li>
-                            <li><a href="">Blog</a></li>
-                        </ul>
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <h4>Product</h4>
+                            <ul>
+                                <li><a href="">Product</a></li>
+                                <li><a href="">Pricing</a></li>
+                                <li><a href="">Customers</a></li>
+                                <li><a href="">Page Builder</a></li>
+                                <li><a href="">What's new</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-4">
+                            <h4>Company</h4>
+                            <ul>
+                                <li><a href="">About us</a></li>
+                                <li><a href="">Try Demo</a></li>
+                                <li><a href="">Terms of service</a></li>
+                                <li><a href="">Page Builder</a></li>
+                                <li><a href="">Privacy policy</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-4">
+                            <h4>Help Center</h4>
+                            <ul>
+                                <li><a href="">Help centre</a></li>
+                                <li><a href="">Email Us</a></li>
+                                <li><a href="">Message Us</a></li>
+                                <li><a href="">Blog</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-4">
+                    <div class="mobile-only-margin"></div>
                     <h4>Sign Up to Our Weekly Newslater</h4>
                     <div class="email-subscribe form">
                         <form action="index.html">
@@ -296,7 +301,7 @@
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/owl.carousel.min.js"></script>
-        <script src="assets/js/jquery.magnific-popup.min.js"></script>
+    <script src="assets/js/jquery.magnific-popup.min.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
 
