--- a/exam-1/case-study-v2.html
+++ b/exam-1/case-study-v2.html
@@ -21,7 +21,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-2 text-left">
-                    <a href="index.html"><img src="assets/img/logo.png" alt="logo"></a>
+                    <div class="logo">
+                        <a href="index.html"><img src="assets/img/logo.png" alt="logo"></a>
+                    </div>
                 </div>
                 <div class="col-md-8 text-center">
                     <div class="main_menu">
@@ -54,7 +56,7 @@
                                                     <li><a href="services-v1.html">Service</a></li>
                                                     <li><a href="case-study-v1.html">Case-studies</a></li>
                                                     <li><a href="blog.html">Blog</a></li>
-                                                    <li><a href="Contact-v1.html">Contact</a></li>
+                                                    <li><a href="Contact-us-v1.html">Contact</a></li>
                                                 </ul>
                                             </div>
                                             <div class="col-md-3">
@@ -99,9 +101,9 @@
                                         <li><a href="blog-single.html">single-blog</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="Contact-v1.html">Contact</a>
+                                <li><a href="Contact-us-v1.html">Contact</a>
                                     <ul>
-                                         <li><a href="Contact-us-v1.html">Contact-v1</a></li>
+                                        <li><a href="Contact-us-v1.html">Contact-v1</a></li>
                                         <li><a href="Contact-us-v2.html">Contact-v2</a></li>
                                     </ul>
                                 </li>
@@ -127,7 +129,7 @@
     <div class="section-padding">
         <div class="container">
             <div class="row  boxed-case-study">
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-6">
                     <div class="case-study-box-style-2">
                         <div class="case-study-preview case-study-preview-1">
                             <div class="case-study-link-tablecell">
@@ -138,7 +140,7 @@
                         <h4>Project Alibaba UX <span>UI & UX Design</span></h4>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-6">
                     <div class="case-study-box-style-2">
                         <div class="case-study-preview case-study-preview-2">
                             <div class="case-study-link-tablecell">
@@ -149,7 +151,7 @@
                         <h4>Amazon Eco UI <span>UI & UX Design</span></h4>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-6">
                     <div class="case-study-box-style-2">
                         <div class="case-study-preview case-study-preview-3">
                             <div class="case-study-link-tablecell">
@@ -160,7 +162,7 @@
                         <h4>Mark Branding <span>Branding Design</span></h4>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-6">
                     <div class="case-study-box-style-2">
                         <div class="case-study-preview case-study-preview-1">
                             <div class="case-study-link-tablecell">
@@ -171,7 +173,7 @@
                         <h4>Project Alibaba UX <span>UI & UX Design</span></h4>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-6">
                     <div class="case-study-box-style-2">
                         <div class="case-study-preview case-study-preview-2">
                             <div class="case-study-link-tablecell">
@@ -182,7 +184,7 @@
                         <h4>Amazon Eco UI <span>UI & UX Design</span></h4>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-6">
                     <div class="case-study-box-style-2">
                         <div class="case-study-preview case-study-preview-3">
                             <div class="case-study-link-tablecell">
@@ -212,37 +214,40 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
-                    <div class="col-md-4">
-                        <h4>Product</h4>
-                        <ul>
-                            <li><a href="">Product</a></li>
-                            <li><a href="">Pricing</a></li>
-                            <li><a href="">Customers</a></li>
-                            <li><a href="">Page Builder</a></li>
-                            <li><a href="">What's new</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-4">
-                        <h4>Company</h4>
-                        <ul>
-                            <li><a href="">About us</a></li>
-                            <li><a href="">Try Demo</a></li>
-                            <li><a href="">Terms of service</a></li>
-                            <li><a href="">Page Builder</a></li>
-                            <li><a href="">Privacy policy</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-4">
-                        <h4>Help Center</h4>
-                        <ul>
-                            <li><a href="">Help centre</a></li>
-                            <li><a href="">Email Us</a></li>
-                            <li><a href="">Message Us</a></li>
-                            <li><a href="">Blog</a></li>
-                        </ul>
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <h4>Product</h4>
+                            <ul>
+                                <li><a href="">Product</a></li>
+                                <li><a href="">Pricing</a></li>
+                                <li><a href="">Customers</a></li>
+                                <li><a href="">Page Builder</a></li>
+                                <li><a href="">What's new</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-4">
+                            <h4>Company</h4>
+                            <ul>
+                                <li><a href="">About us</a></li>
+                                <li><a href="">Try Demo</a></li>
+                                <li><a href="">Terms of service</a></li>
+                                <li><a href="">Page Builder</a></li>
+                                <li><a href="">Privacy policy</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-4">
+                            <h4>Help Center</h4>
+                            <ul>
+                                <li><a href="">Help centre</a></li>
+                                <li><a href="">Email Us</a></li>
+                                <li><a href="">Message Us</a></li>
+                                <li><a href="">Blog</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-4">
+                    <div class="mobile-only-margin"></div>
                     <h4>Sign Up to Our Weekly Newslater</h4>
                     <div class="email-subscribe form">
                         <form action="index.html">
