--- a/exam-1/services-v2.html
+++ b/exam-1/services-v2.html
@@ -21,7 +21,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-2 text-left">
-                    <a href="index.html"><img src="assets/img/logo.png" alt="logo"></a>
+                    <div class="logo">
+                        <a href="index.html"><img src="assets/img/logo.png" alt="logo"></a>
+                    </div>
                 </div>
                 <div class="col-md-8 text-center">
                     <div class="main_menu">
@@ -54,7 +56,7 @@
                                                     <li><a href="services-v1.html">Service</a></li>
                                                     <li><a href="case-study-v1.html">Case-studies</a></li>
                                                     <li><a href="blog.html">Blog</a></li>
-                                                    <li><a href="Contact-v1.html">Contact</a></li>
+                                                    <li><a href="Contact-us-v1.html">Contact</a></li>
                                                 </ul>
                                             </div>
                                             <div class="col-md-3">
@@ -99,9 +101,9 @@
                                         <li><a href="blog-single.html">single-blog</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="Contact-v1.html">Contact</a>
+                                <li><a href="Contact-us-v1.html">Contact</a>
                                     <ul>
-                                         <li><a href="Contact-us-v1.html">Contact-v1</a></li>
+                                        <li><a href="Contact-us-v1.html">Contact-v1</a></li>
                                         <li><a href="Contact-us-v2.html">Contact-v2</a></li>
                                     </ul>
                                 </li>
@@ -127,7 +129,7 @@
     <div class="section-padding">
         <div class="container">
             <div class="row text-center">
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-6">
                     <div class="single-service-box">
                         <div class="service-icon">
                             <span class="service-number">01</span>
@@ -138,7 +140,7 @@
                         <a href="" class="service-read-more-btn">Read More<i class="fa fa-long-arrow-right"></i></a>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-6">
                     <div class="single-service-box">
                         <div class="service-icon">
                             <span class="service-number">02</span>
@@ -149,7 +151,7 @@
                         <a href="" class="service-read-more-btn">Read More<i class="fa fa-long-arrow-right"></i></a>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-6">
                     <div class="single-service-box">
                         <div class="service-icon">
                             <span class="service-number">03</span>
@@ -160,7 +162,7 @@
                         <a href="" class="service-read-more-btn">Read More<i class="fa fa-long-arrow-right"></i></a>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-6">
                     <div class="single-service-box">
                         <div class="service-icon">
                             <span class="service-number">04</span>
@@ -171,7 +173,7 @@
                         <a href="" class="service-read-more-btn">Read More<i class="fa fa-long-arrow-right"></i></a>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-6">
                     <div class="single-service-box">
                         <div class="service-icon">
                             <span class="service-number">05</span>
@@ -182,7 +184,7 @@
                         <a href="" class="service-read-more-btn">Read More<i class="fa fa-long-arrow-right"></i></a>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-6">
                     <div class="single-service-box">
                         <div class="service-icon">
                             <span class="service-number">06</span>
@@ -212,52 +214,55 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
-                    <div class="col-md-4">
-                        <h4>Product</h4>
-                        <ul>
-                            <li><a href="">Product</a></li>
-                            <li><a href="">Pricing</a></li>
-                            <li><a href="">Customers</a></li>
-                            <li><a href="">Page Builder</a></li>
-                            <li><a href="">What's new</a></li>
-                        </ul>
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <h4>Product</h4>
+                            <ul>
+                                <li><a href="">Product</a></li>
+                                <li><a href="">Pricing</a></li>
+                                <li><a href="">Customers</a></li>
+                                <li><a href="">Page Builder</a></li>
+                                <li><a href="">What's new</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-4">
+                            <h4>Company</h4>
+                            <ul>
+                                <li><a href="">About us</a></li>
+                                <li><a href="">Try Demo</a></li>
+                                <li><a href="">Terms of service</a></li>
+                                <li><a href="">Page Builder</a></li>
+                                <li><a href="">Privacy policy</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-4">
+                            <h4>Help Center</h4>
+                            <ul>
+                                <li><a href="">Help centre</a></li>
+                                <li><a href="">Email Us</a></li>
+                                <li><a href="">Message Us</a></li>
+                                <li><a href="">Blog</a></li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="col-md-4">
-                        <h4>Company</h4>
-                        <ul>
-                            <li><a href="">About us</a></li>
-                            <li><a href="">Try Demo</a></li>
-                            <li><a href="">Terms of service</a></li>
-                            <li><a href="">Page Builder</a></li>
-                            <li><a href="">Privacy policy</a></li>
+                        <div class="mobile-only-margin"></div>
+                        <h4>Sign Up to Our Weekly Newslater</h4>
+                        <div class="email-subscribe form">
+                            <form action="index.html">
+                                <input type="email" placeholder="Email Address">
+                                <input type="submit" value="Sign Up">
+                            </form>
+                        </div>
+                        <h4>Social</h4>
+                        <ul class="social-link">
+                            <li><a href=""><i class="fa fa-facebook"></i>Facebook</a></li>
+                            <li><a href=""><i class="fa fa-twitter"></i>Twitter</a></li>
+                            <li><a href=""><i class="fa fa-pinterest"></i>Pinterest</a></li>
+                            <li><a href=""><i class="fa fa-linkedin"></i>Linkdin</a></li>
+                            <li><a href=""><i class="fa fa-instagram"></i>Instagram</a></li>
                         </ul>
                     </div>
-                    <div class="col-md-4">
-                        <h4>Help Center</h4>
-                        <ul>
-                            <li><a href="">Help centre</a></li>
-                            <li><a href="">Email Us</a></li>
-                            <li><a href="">Message Us</a></li>
-                            <li><a href="">Blog</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <h4>Sign Up to Our Weekly Newslater</h4>
-                    <div class="email-subscribe form">
-                        <form action="index.html">
-                            <input type="email" placeholder="Email Address">
-                            <input type="submit" value="Sign Up">
-                        </form>
-                    </div>
-                    <h4>Social</h4>
-                    <ul class="social-link">
-                        <li><a href=""><i class="fa fa-facebook"></i>Facebook</a></li>
-                        <li><a href=""><i class="fa fa-twitter"></i>Twitter</a></li>
-                        <li><a href=""><i class="fa fa-pinterest"></i>Pinterest</a></li>
-                        <li><a href=""><i class="fa fa-linkedin"></i>Linkdin</a></li>
-                        <li><a href=""><i class="fa fa-instagram"></i>Instagram</a></li>
-                    </ul>
                 </div>
             </div>
         </div>
